초기 프로젝트 세팅 mvc로...